--- a/backend/package.json
+++ b/backend/package.json
@@ -22,6 +22,8 @@
     "mongoose": "^7.0.2",
     "multer": "^1.4.5-lts.1",
     "multer-storage-cloudinary": "^4.0.0",
+    "passport": "^0.6.0",
+    "passport-google-oauth20": "^2.0.0",
     "socket.io": "^4.6.1",
     "streamifier": "^0.1.1"
   }
